--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -1,12 +1,13 @@
 ---
 name: docker-corsika-simtelarray
-# Build and push Docker image CORSIKA / sim_telarray
+# Build and push vanilla CORSIKA / sim_telarray image and simtools-prod images for different CPU architectures.
 
 on:
   workflow_dispatch:
   pull_request:
     paths:
       - './docker/Dockerfile-simtelarray'
+      - './docker/Dockerfile-prod-opt'
   release:
     types: [published]
   schedule:
@@ -114,7 +115,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}-corsika-sim-telarray-${{ env.LABELS }}
 
-  build-optimized-corsika-simtelarray:
+  build-production-images-optimized:
     runs-on: ubuntu-latest
     needs: download-corsika
     permissions:
@@ -168,7 +169,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}.{{patch}}
             type=schedule,pattern={{date 'YYYYMMDD'}}
             type=raw,value={{date 'YYYYMMDD-HHmmss'}}
-          images: ${{ env.REGISTRY }}/gammasim/simtools-corsika-sim-telarray-optimized-${{ env.LABELS }}
+          images: ${{ env.REGISTRY }}/gammasim/simtools-prod-opt-${{ env.LABELS }}
           flavor: latest=true
 
       - name: Build and push optimized Docker image
@@ -184,6 +185,6 @@ jobs:
             BERNLOHR_VERSION=${{ matrix.bernlohr_version }}
           push:
             ${{ github.event_name == 'release' || github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
-          file: ./docker/Dockerfile-simtelarray-cerenkopt
+          file: ./docker/Dockerfile-prod-opt
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ env.LABELS }}
