--- a/docker/Dockerfile-prod-opt
+++ b/docker/Dockerfile-prod-opt
@@ -7,7 +7,7 @@ ARG HADRONIC_MODEL="qgs2"
 ARG AVX_FLAG="avx2"
 ARG CORSIKA_VERSION="77550"
 ARG BERNLOHR_VERSION="1.68"
-ARG SIMTOOLS_VERSION=""    # leave empty for latest version
+ARG BUILD_BRANCH=main
 
 RUN yum update -y && yum install -y \
     autoconf \
@@ -24,8 +24,8 @@ RUN yum update -y && yum install -y \
 
 ADD corsika_simtelarray.tar.gz .
 ADD corsikaOptPatch.tar.gz ./corsika-$CORSIKA_VERSION
-RUN tar -zxvf corsika-$CORSIKA_VERSION.tar.gz && \
-    tar -zxvf bernlohr-$BERNLOHR_VERSION.tar.gz -C corsika-$CORSIKA_VERSION/bernlohr && \
+RUN tar -zxf corsika-$CORSIKA_VERSION.tar.gz && \
+    tar -zxf bernlohr-$BERNLOHR_VERSION.tar.gz -C corsika-$CORSIKA_VERSION/bernlohr && \
     rm -f examples-with-data.tar.gz && \
     rm -f sim_telarray_config.tar.gz
 
@@ -58,7 +58,6 @@ RUN mv -f corsika-$CORSIKA_VERSION/run/corsika$CORSIKA_VERSIONLinux_*ceropt cors
 
 RUN export NO_CORSIKA=1 && ./build_all $BUILD_OPT $HADRONIC_MODEL gsl
 
-# cleanup
 # corsika source code is removed to follow
 # the corsika non-distribution policy.
 RUN mv ./corsika-77*/run corsika-run && \
@@ -68,28 +67,31 @@ RUN mv ./corsika-77*/run corsika-run && \
 FROM almalinux:9.5-minimal
 WORKDIR /workdir
 ENV DEBIAN_FRONTEND=noninteractive
+ARG BUILD_BRANCH=main
 COPY --from=build_image /workdir/sim_telarray/ /workdir/sim_telarray/
 
 RUN microdnf update -y && microdnf install -y \
     bc \
     findutils \
     gcc-c++ \
+    git \
     gsl-devel \
     gcc-fortran \
     libgfortran \
     procps \
     python3.11-pip \
-#    python3.11-devel \
     zstd && \
     microdnf clean all
 
-RUN python3.11 -m venv env && \
+RUN BUILD_BRANCH=$(echo $BUILD_BRANCH | sed 's#refs/tags/##') && \
+    git clone -b $BUILD_BRANCH https://github.com/gammasim/simtools.git --depth 1 && \
+    python3.11 -m venv env && \
     source env/bin/activate && \
+    cd /workdir/simtools/ && \
     pip install -U pip && \
-    pip install --no-cache-dir gammasimtools${SIMTOOLS_VERSION:+==$SIMTOOLS_VERSION}
+    pip install --no-cache-dir . && \
+    rm -rf /workdir/simtools
 
 ENV SIMTEL_PATH="/workdir/sim_telarray/"
 ENV PATH="/workdir/env/bin/:$PATH"
 SHELL ["/bin/bash", "-c"]
-
-WORKDIR /workdir
