--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Download corsika-simtel-package
         run: |
-          wget --no-verbose https://syncandshare.desy.de/index.php/s/${{ secrets[format('CLOUD_SIMTEL_{0}', matrix.simtel_version)] }}/download -O corsika_simtelarray_${{ matrix.simtel_version }}.tar.gz
+          wget --no-verbose ${{ env.CLOUD_URL }}/${{ secrets[format('CLOUD_SIMTEL_{0}', matrix.simtel_version)] }}/download -O corsika_simtelarray_${{ matrix.simtel_version }}.tar.gz
           wget --no-verbose ${{ env.CLOUD_URL }}/${{ secrets.CLOUD_CORSIKA_OPT }}/download -O corsikaOptPatch.tar.gz  # might depend on CORSIKA version
 
       - name: Upload corsika-simtel-package
@@ -69,14 +69,9 @@ jobs:
           name: corsika-simtelarray-package-${{ matrix.simtel_version }}
           path: ./downloaded-artifacts
 
-      - name: Rename and set build arguments
+      - name: Rename corsika simtel package file
         run: |
           mv ./downloaded-artifacts/corsika_simtelarray_${{ matrix.simtel_version }}.tar.gz corsika_simtelarray.tar.gz
-          if [[ "${{ github.event_name }}" == 'pull_request' ]]; then
-            echo "BUILD_BRANCH=${GITHUB_HEAD_REF}" >> "$GITHUB_ENV"
-          else
-            echo "BUILD_BRANCH=${GITHUB_REF#refs/heads/}" >> "$GITHUB_ENV"
-          fi
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -145,10 +140,15 @@ jobs:
           name: corsika-simtelarray-package-${{ matrix.version.simtel_version }}
           path: ./downloaded-artifacts
 
-      - name: Rename corsika-simtel-package files
+      - name: Rename corsika-simtel-package files and set build branch
         run: |
           mv ./downloaded-artifacts/corsika_simtelarray_${{ matrix.version.simtel_version }}.tar.gz corsika_simtelarray.tar.gz
           mv ./downloaded-artifacts/corsikaOptPatch.tar.gz corsikaOptPatch.tar.gz
+          if [[ "${{ github.event_name }}" == 'pull_request' ]]; then
+            echo "BUILD_BRANCH=${GITHUB_HEAD_REF}" >> "$GITHUB_ENV"
+          else
+            echo "BUILD_BRANCH=${GITHUB_REF#refs/heads/}" >> "$GITHUB_ENV"
+          fi
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -183,6 +183,7 @@ jobs:
             AVX_FLAG=${{ matrix.avx_instruction }}
             CORSIKA_VERSION=${{ matrix.version.corsika_version }}
             BERNLOHR_VERSION=${{ matrix.version.bernlohr_version }}
+            BUILD_BRANCH=${{ env.BUILD_BRANCH }}
           push:
             ${{ github.event_name == 'release' || github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
           file: ./docker/Dockerfile-prod-opt
