--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -105,7 +105,8 @@ jobs:
           platforms: linux/amd64,linux/arm64/v8
           build-args: '{"BUILD_OPT": "${{ matrix.production }}", "HADRONIC_MODEL": "${{ matrix.hadronic_model }}"}'
           push:
-            ${{ github.event_name == 'release' || github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
+#            ${{ github.event_name == 'release' || github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
+            ${{ github.event_name == 'release' || github.event.pull_request.merged == true }}
           file: ./docker/Dockerfile-simtelarray
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}-corsika-sim-telarray-${{ env.LABELS }}
@@ -122,10 +123,10 @@ jobs:
           - { simtel_version: '240205', corsika_version: '77500', bernlohr_version: '1.67' }
           - { simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68' }
         hadronic_model: ['qgs2']
-        production: ['prod6-baseline']
-#        production: ['prod6-sc', 'prod6-baseline', 'prod5', 'prod5-sc']
-        avx_instruction: ['avx2']
-#        avx_instruction: ['avx2', 'avx512f', 'sse4', 'avx']
+#        production: ['prod6-baseline']
+        production: ['prod6-sc', 'prod6-baseline', 'prod5', 'prod5-sc']
+#        avx_instruction: ['avx2']
+        avx_instruction: ['avx2', 'avx512f', 'sse4', 'avx']
 
     env:
       LABELS: "${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production }}-${{ matrix.hadronic_model }}-${{ matrix.avx_instruction }}"
