--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -53,11 +53,13 @@ jobs:
       matrix:
 #        production: ['prod6-sc', 'prod6-baseline', 'prod5', 'prod5-sc']
         production: ['prod6-baseline']
-        simtel_version: ['240927']
+        version:
+#          - { simtel_version: '240205', corsika_version: '77500', bernlohr_version: '1.67' }
+          - { simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68' }
         hadronic_model: ['qgs2']
 
     env:
-      LABELS: "${{ matrix.simtel_version }}-${{ matrix.production }}-${{ matrix.hadronic_model }}"
+      LABELS: "${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production }}-${{ matrix.hadronic_model }}"
 
     steps:
       - name: Checkout repository
@@ -66,12 +68,12 @@ jobs:
       - name: Download corsika-simtel-package
         uses: actions/download-artifact@v4
         with:
-          name: corsika-simtelarray-package-${{ matrix.simtel_version }}
+          name: corsika-simtelarray-package-${{ matrix.version.simtel_version }}
           path: ./downloaded-artifacts
 
       - name: Rename corsika simtel package file
         run: |
-          mv ./downloaded-artifacts/corsika_simtelarray_${{ matrix.simtel_version }}.tar.gz corsika_simtelarray.tar.gz
+          mv ./downloaded-artifacts/corsika_simtelarray_${{ matrix.version.simtel_version }}.tar.gz corsika_simtelarray.tar.gz
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -105,8 +107,7 @@ jobs:
           platforms: linux/amd64,linux/arm64/v8
           build-args: '{"BUILD_OPT": "${{ matrix.production }}", "HADRONIC_MODEL": "${{ matrix.hadronic_model }}"}'
           push:
-#            ${{ github.event_name == 'release' || github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
-            ${{ github.event_name == 'release' || github.event.pull_request.merged == true }}
+            ${{ github.event_name == 'release' || github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
           file: ./docker/Dockerfile-simtelarray
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}-corsika-sim-telarray-${{ env.LABELS }}
