--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -105,7 +105,12 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64/v8
-          build-args: '{"BUILD_OPT": "${{ matrix.production }}", "HADRONIC_MODEL": "${{ matrix.hadronic_model }}"}'
+          build-args: |
+           BUILD_OPT=${{ matrix.production }}
+           HADRONIC_MODEL=${{ matrix.hadronic_model }}
+           SIMTEL_VERSION=${{ matrix.version.simtel_version }}
+           CORSIKA_VERSION=${{ matrix.version.corsika_version }}
+           BERNLOHR_VERSION=${{ matrix.version.bernlohr_version }}
           push:
             ${{ github.event_name == 'release' || github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
           file: ./docker/Dockerfile-simtelarray
