--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -51,15 +51,18 @@ jobs:
       packages: write
     strategy:
       matrix:
-#        production: ['prod6-sc', 'prod6-baseline', 'prod5', 'prod5-sc']
-        production: ['prod6-baseline']
+        production:
+          - { build_opt: 'prod6-sc', extra_def: '-DMAXIMUM_TELESCOPES=128'}
+          - { build_opt: 'prod6-baseline', extra_def: ''}
+          - { build_opt: 'prod5', extra_def: ''}
+          - { build_opt: 'prod5-sc', extra_def: ''}
         version:
 #          - { simtel_version: '240205', corsika_version: '77500', bernlohr_version: '1.67' }
           - { simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68' }
         hadronic_model: ['qgs2']
 
     env:
-      LABELS: "${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production }}-${{ matrix.hadronic_model }}"
+      LABELS: "${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production.build_opt }}-${{ matrix.hadronic_model }}"
 
     steps:
       - name: Checkout repository
@@ -106,7 +109,8 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64/v8
           build-args: |
-           BUILD_OPT=${{ matrix.production }}
+           BUILD_OPT=${{ matrix.production.build_opt }}
+           EXTRA_DEF=${{ matrix.production.extra_def }}
            HADRONIC_MODEL=${{ matrix.hadronic_model }}
            SIMTEL_VERSION=${{ matrix.version.simtel_version }}
            CORSIKA_VERSION=${{ matrix.version.corsika_version }}
@@ -129,13 +133,16 @@ jobs:
           - { simtel_version: '240205', corsika_version: '77500', bernlohr_version: '1.67' }
 #          - { simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68' }
         hadronic_model: ['qgs2']
-        production: ['prod6-baseline']
-#        production: ['prod6-sc', 'prod6-baseline', 'prod5', 'prod5-sc']
+        production:
+          - { build_opt: 'prod6-sc', extra_def: '-DMAXIMUM_TELESCOPES=128'}
+          - { build_opt: 'prod6-baseline', extra_def: ''}
+#          - { build_opt: 'prod5', extra_def: ''}
+#          - { build_opt: 'prod5-sc', extra_def: ''}
         avx_instruction: ['avx2']
 #        avx_instruction: ['avx2', 'avx512f', 'sse4', 'avx']
 
     env:
-      LABELS: "${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production }}-${{ matrix.hadronic_model }}-${{ matrix.avx_instruction }}"
+      LABELS: "${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production.build_opt }}-${{ matrix.hadronic_model }}-${{ matrix.avx_instruction }}"
 
     steps:
       - name: Checkout repository
@@ -185,7 +192,8 @@ jobs:
           context: .
           platforms: linux/amd64
           build-args: |
-            BUILD_OPT=${{ matrix.production }}
+            BUILD_OPT=${{ matrix.production.build_opt }}
+            EXTRA_DEF=${{ matrix.production.extra_def }}
             HADRONIC_MODEL=${{ matrix.hadronic_model }}
             AVX_FLAG=${{ matrix.avx_instruction }}
             CORSIKA_VERSION=${{ matrix.version.corsika_version }}
