--- a/src/simtools/schemas/array_elements.yml
+++ b/src/simtools/schemas/array_elements.yml
@@ -37,7 +37,7 @@ data:
     collection: "telescopes"
     observatory: "CTAO"
     site: ["North", "South"]
-    design_types: ["design", "test", "flashcam", "nectarcam"]
+    design_types: ["design", "test", "FlashCam", "NectarCam"]
     description: "Mid-sized telescope"
   ILLN:
     collection: "calibration_devices"
