--- a/.github/workflows/CI-docs.yml
+++ b/.github/workflows/CI-docs.yml
@@ -52,15 +52,16 @@ jobs:
       - name: Check for complete API documentation
         run: |-
           MODULES=$(find src/simtools -type f -name "*.py" \
-            ! -path "src/simtools/applications/*" \
-            ! -name "__init__.py" ! -name "version.py" \
-            ! -path "src/simtools/_*" -prune)
-          FULLY_DOCUMENTED="TRUE"
-          for M in "${MODULES[@]}"; do
+          ! -path "src/simtools/applications/*" \
+          ! -name "__init__.py" \
+          ! -name "version.py" \
+          ! -path "src/simtools/_*" -prune)
+
+          for M in $MODULES; do
               module=$(basename "$M" .py)
               if ! grep -q "$module" docs/source/api-reference/*.md; then
-                echo "Undocumented module: $module"
-                FULLY_DOCUMENTED="FALSE"
+                  echo "Undocumented module: $module"
+                  FULLY_DOCUMENTED="FALSE"
               fi
           done
           if [[ "$FULLY_DOCUMENTED" = "FALSE" ]]; then
