--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -97,6 +97,12 @@ jobs:
       - name: Extract SIMTOOLS_DB_SIMULATION_MODEL
         run: echo "SIMTOOLS_DB_SIMULATION_MODEL=$(grep 'SIMTOOLS_DB_SIMULATION_MODEL=' .env_template | cut -d '=' -f2- | tr -d '"')" >> "$GITHUB_ENV"
 
+      - name: testing env
+        env:
+          SIMTOOLS_DB_SIMULATION_MODEL: ${{ env.SIMTOOLS_DB_SIMULATION_MODEL }}
+        run:
+          env
+
       - name: Unit tests
         shell: bash -l {0}
         env:
