--- a/tests/integration_tests/config/docs_produce_reports_run.yml
+++ b/tests/integration_tests/config/docs_produce_reports_run.yml
@@ -5,6 +5,6 @@ CTA_SIMPIPE:
     SITE: North
     TELESCOPE: LSTN-01
     MODEL_VERSION: 6.0.0
-    OUTPUT_PATH: simtools-output/reports/productions/6.0.0
+    OUTPUT_PATH: simtools-output/reports
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: LSTN-01.md
+    - OUTPUT_FILE: productions/6.0.0/LSTN-01.md
