--- a/tests/integration_tests/config/docs_generate_model_parameter_report_run.yml
+++ b/tests/integration_tests/config/docs_generate_model_parameter_report_run.yml
@@ -4,7 +4,7 @@ CTA_SIMPIPE:
   CONFIGURATION:
     SITE: North
     TELESCOPE: LSTN-01
-    MODEL_VERSION: 6.0.0
-    OUTPUT_PATH: simtools-output/reports
+    MODEL_VERSION: 5.0.0
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: parameters/LSTN-01/quantum_efficiency.md
+    - OUTPUT_FILE: reports/parameters/LSTN-01/quantum_efficiency.md
