--- a/docker/Dockerfile-simtelarray
+++ b/docker/Dockerfile-simtelarray
@@ -3,6 +3,9 @@ WORKDIR /workdir/sim_telarray
 ARG BUILD_OPT="prod6-sc"
 ARG EXTRA_DEF="-DMAXIMUM_TELESCOPES=128"
 ARG HADRONIC_MODEL="qgs2"
+ARG AVX_FLAG="no_opt"
+ARG CORSIKA_VERSION="77550"
+ARG BERNLOHR_VERSION="1.68"
 
 RUN yum update -y && yum install -y \
     gcc-fortran gsl-devel libgfortran \
@@ -14,13 +17,19 @@ RUN rm -f examples-with-data.tar.gz && \
     rm -f sim_telarray_config.tar.gz && \
     export EXTRA_DEFINES="${EXTRA_DEF}" && ./build_all $BUILD_OPT $HADRONIC_MODEL gsl
 
-
 # corsika source code is removed to follow
 # the corsika non-distribution policy.
-RUN rm -f ./corsika-run && \
-    mv ./corsika-77*/run ./corsika-run && \
-    rm -rf ./corsika-77* && \
-    find . -name "*.tar.gz" -exec rm -f {} \;
+RUN mv ./corsika-77*/run corsika-run && \
+    rm -rf ./corsika-7[0-9]* && \
+    find . -name "*.tar.gz" -delete
+
+# create a yml file in workdir with the build options
+RUN echo "build_opt: $BUILD_OPT" > /workdir/sim_telarray/build_opts.yml && \
+    echo "extra_def: $EXTRA_DEF" >> /workdir/sim_telarray/build_opts.yml && \
+    echo "hadronic_model: $HADRONIC_MODEL" >> /workdir/sim_telarray/build_opts.yml && \
+    echo "avx_flag: $AVX_FLAG" >> /workdir/sim_telarray/build_opts.yml && \
+    echo "corsika_version: $CORSIKA_VERSION" >> /workdir/sim_telarray/build_opts.yml && \
+    echo "bernlohr_version: $BERNLOHR_VERSION" >> /workdir/sim_telarray/build_opts.yml
 
 FROM almalinux:9.5-minimal
 WORKDIR /workdir
