fixed integration test configs

--- a/tests/integration_tests/config/derive_mirror_rnda_psf_no_tuning.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_no_tuning.yml
@@ -7,8 +7,7 @@ CTA_SIMPIPE:
       TELESCOPE: MSTx-FlashCam
       MODEL_VERSION: 6.0.0
       CONTAINMENT_FRACTION: 0.8
-      MIRROR_LIST: |
-        ./tests/resources/mirror_list_CTA-N-LST1_v2019-03-31_rotated.ecsv
+      MIRROR_LIST: ./tests/resources/mirror_list_CTA-N-LST1_v2019-03-31_rotated.ecsv
       PSF_MEASUREMENT: ./tests/resources/MLTdata-preproduction.ecsv
       USE_RANDOM_FOCAL_LENGTH: false
       NO_TUNING: true
@@ -19,11 +18,10 @@ CTA_SIMPIPE:
       USE_PLAIN_OUTPUT_PATH: true
       LOG_LEVEL: DEBUG
     INTEGRATION_TESTS:
-      - OUTPUT_FILE: test_derive_mirror_rnda_psf_no_tuning.ecsv
-      - REFERENCE_OUTPUT_FILE: |
-          tests/resources/derive_mirror_rnda_psf_no_tuning.ecsv
-        TOLERANCE: 0.1
-        TEST_COLUMNS:
+    - OUTPUT_FILE: test_derive_mirror_rnda_psf_no_tuning.ecsv
+    - REFERENCE_OUTPUT_FILE: tests/resources/derive_mirror_rnda_psf_no_tuning.ecsv
+      TOLERANCE: 0.1
+      TEST_COLUMNS:
       - TEST_COLUMN_NAME: mirror_reflection_random_angle_sigma1
         CUT_COLUMN_NAME: best_fit
         CUT_CONDITION: ==True
