--- a/tests/integration_tests/config/derive_mirror_rnda_psf_mean.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_mean.yml
@@ -7,9 +7,7 @@ CTA_SIMPIPE:
       TELESCOPE: LSTS-01
       MODEL_VERSION: 6.0.0
       CONTAINMENT_FRACTION: 0.8
-      MIRROR_LIST: './tests/resources/mirror_list_CTA-N-LST1_v2019-03-31_rotated.ecsv
-
-        '
+      MIRROR_LIST: ./tests/resources/mirror_list_CTA-N-LST1_v2019-03-31_rotated.ecsv
       PSF_MEASUREMENT_CONTAINMENT_MEAN: 1.4
       RNDA: 0.003
       TEST: true
@@ -19,9 +17,7 @@ CTA_SIMPIPE:
       LOG_LEVEL: DEBUG
     INTEGRATION_TESTS:
     - OUTPUT_FILE: test_derive_mirror_rnda_psf_mean.ecsv
-    - REFERENCE_OUTPUT_FILE: 'tests/resources/derive_mirror_rnda_psf_mean.ecsv
-
-        '
+    - REFERENCE_OUTPUT_FILE: tests/resources/derive_mirror_rnda_psf_mean.ecsv
       TOLERANCE: 0.3
       TEST_COLUMNS:
       - TEST_COLUMN_NAME: mirror_reflection_random_angle_sigma1
