--- a/tests/integration_tests/config/derive_mirror_rnda_psf_random_flen.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_random_flen.yml
@@ -17,8 +17,7 @@ CTA_SIMPIPE:
       LOG_LEVEL: DEBUG
     INTEGRATION_TESTS:
     - OUTPUT_FILE: test_derive_mirror_rnda_psf_random_flen.ecsv
-    - REFERENCE_OUTPUT_FILE: |
-        tests/resources/derive_mirror_rnda_psf_random_flen.ecsv
+    - REFERENCE_OUTPUT_FILE: tests/resources/derive_mirror_rnda_psf_random_flen.ecsv
       TOLERANCE: 0.3
       TEST_COLUMNS:
       - TEST_COLUMN_NAME: mirror_reflection_random_angle_sigma1
