--- a/src/simtools/schemas/array_elements.yml
+++ b/src/simtools/schemas/array_elements.yml
@@ -15,6 +15,7 @@ data:
     collection: "telescopes"
     observatory: "CTAO"
     site: "North"
+    design_types: ["design", "test", "FlashCam", "NectarCam"]
   LSTS:
     collection: "telescopes"
     observatory: "CTAO"
@@ -23,6 +24,7 @@ data:
     collection: "telescopes"
     observatory: "CTAO"
     site: "South"
+    design_types: ["design", "test", "FlashCam", "NectarCam"]
   SSTS:
     collection: "telescopes"
     observatory: "CTAO"
