--- a/.github/workflows/CI-software-update.yml
+++ b/.github/workflows/CI-software-update.yml
@@ -2,9 +2,9 @@ name: Software updates
 # Run regularly to update software dependencies
 
 on:
-  # every Monday at midnight
+   # Run on the first day of each month at midnight
   schedule:
-    - cron: "0 0 * * 1"
+    - cron: "0 0 1 * *"
   workflow_dispatch:
 
 jobs:
