add user to the environment

--- a/.env_template
+++ b/.env_template
@@ -8,6 +8,10 @@ SIMTOOLS_DB_API_PW=YOUR_PASSWORD # Password for MongoDB: ask the responsible per
 SIMTOOLS_DB_API_AUTHENTICATION_DATABASE='admin'
 SIMTOOLS_DB_SIMULATION_MODEL='CTAO-Simulation-ModelParameters-v0-4-0'
 SIMTOOLS_SIMTEL_PATH='/workdir/sim_telarray'
+SIMTOOLS_USER_NAME='simtools-user'
+SIMTOOLS_USER_ORGANIZATION='CTAO'
+SIMTOOLS_USER_EMAIL="default@email.org"
+SIMTOOLS_USER_ORCID='0000-0000-0000-0000'
 
 # The dashboards to monitor the MongoDB instance are in (accessible only from within DESY)
 # https://statspub.zeuthen.desy.de/d/4vXnWwMGz/mongodb?orgId=1&refresh=30s
