--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -57,12 +57,12 @@ jobs:
           - { build_opt: 'prod5', extra_def: ''}
           - { build_opt: 'prod5-sc', extra_def: ''}
         version:
-          - { simtel_version: '240205', corsika_version: '77500', bernlohr_version: '1.67' }
-#          - { simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68' }
+#          - { simtel_version: '240205', corsika_version: '77500', bernlohr_version: '1.67' }
+          - { simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68' }
         hadronic_model: ['qgs2']
 
     env:
-      LABELS: "${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production.build_opt }}-${{ matrix.hadronic_model }}"
+      LABELS: '${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production.build_opt }}-${{ matrix.hadronic_model }}'
 
     steps:
       - name: Checkout repository
@@ -106,6 +106,7 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v6
         with:
+          no-cache: true
           context: .
           platforms: linux/amd64,linux/arm64/v8
           build-args: |
