--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ optional-dependencies."tests" = [
   "pytest-profiling",
   "pytest-random-order",
   "pytest-repeat",
+  "pytest-requirements",
   "pytest-xdist",
 ]
 urls."bug tracker" = "https://github.com/gammasim/simtools/issues"
@@ -272,7 +273,8 @@ norecursedirs = [
   "docs/_build",
   "src/simtools/applications",
 ]
-addopts = "-v --cov=simtools --cov-report=xml --cov-report=term"
+#addopts = ["-v", "--cov=simtools", "--cov-report=xml", "--cov-report=term", "-p", "pytest_requirements"]
+addopts = [ "-p", "pytest_requirements" ]
 testpaths = "tests/unit_tests/"
 # Ignore the warning about fontTools.misc.py23
 filterwarnings = "ignore:The py23 module has been deprecated:DeprecationWarning"
