--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,69 +1,75 @@
+---
 repos:
-  # Ruff
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.7
-    hooks:
-      - id: ruff
-        args: ["--fix"]
-  # pylint
-  - repo: local
-    hooks:
-      - id: pylint
-        name: pylint
-        entry: pylint
-        language: system
-        types: [python]
-        exclude: ^tests/|^simtools/applications/db_development_tools/
-        args:
-          [
-            "-rn",  # Only display messages
-            "-sn",  # Don't display the score
-          ]
-  # https://github.com/pre-commit/pre-commit-hooks
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
-    hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-added-large-files
-        args: ['--maxkb=500']
-  # https://github.com/HunterMcGushion/docstr_coverage
-  - repo: https://github.com/HunterMcGushion/docstr_coverage
-    rev: v2.3.2  # most recent docstr-coverage release or commit sha
-    hooks:
-      - id: docstr-coverage
-        args: ["--verbose", "2", "--fail-under", "70.", "src/simtools"]
-  # Github action
-  - repo: https://github.com/rhysd/actionlint
-    rev: v1.7.7
-    hooks:
-      - id: actionlint
-  # https://pyproject-fmt.readthedocs.io/en/latest/
-  - repo: https://github.com/tox-dev/pyproject-fmt
-    rev: "v2.5.0"
-    hooks:
-      - id: pyproject-fmt
-  # codespell
-  - repo: https://github.com/codespell-project/codespell
-    rev: v2.4.1
-    hooks:
-      - id: codespell
-  # markdownlint
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.44.0
-    hooks:
-      - id: markdownlint
-        args: ["--disable", "MD041"]
-  # yamllint
-  - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.35.1
-    hooks:
-      - id: yamllint
-        args: ["--strict", "-d", '{extends: default, rules: {line-length: {max: 250}, document-start: {present: false}}}']
-  # towncrier
-  - repo: https://github.com/twisted/towncrier
-    rev: 24.8.0
-    hooks:
-      - id: towncrier-update
-        files: $docs/changes/
-        args: ['--keep']
+# Ruff
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.9.7
+  hooks:
+  - id: ruff
+    args: ["--fix"]
+# pylint
+- repo: local
+  hooks:
+  - id: pylint
+    name: pylint
+    entry: pylint
+    language: system
+    types: [python]
+    exclude: ^tests/|^simtools/applications/db_development_tools/
+    args:
+      [
+        "-rn",  # Only display messages
+        "-sn",  # Don't display the score
+      ]
+# https://github.com/pre-commit/pre-commit-hooks
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v5.0.0
+  hooks:
+  - id: trailing-whitespace
+  - id: end-of-file-fixer
+  - id: check-added-large-files
+    args: ['--maxkb=500']
+# https://github.com/HunterMcGushion/docstr_coverage
+- repo: https://github.com/HunterMcGushion/docstr_coverage
+  rev: v2.3.2  # most recent docstr-coverage release or commit sha
+  hooks:
+  - id: docstr-coverage
+    args: ["--verbose", "2", "--fail-under", "70.", "src/simtools"]
+# Github action
+- repo: https://github.com/rhysd/actionlint
+  rev: v1.7.7
+  hooks:
+  - id: actionlint
+# https://pyproject-fmt.readthedocs.io/en/latest/
+- repo: https://github.com/tox-dev/pyproject-fmt
+  rev: "v2.5.0"
+  hooks:
+  - id: pyproject-fmt
+# codespell
+- repo: https://github.com/codespell-project/codespell
+  rev: v2.4.1
+  hooks:
+  - id: codespell
+# markdownlint
+- repo: https://github.com/igorshubovych/markdownlint-cli
+  rev: v0.44.0
+  hooks:
+  - id: markdownlint
+    args: ["--disable", "MD041"]
+# yamllint
+- repo: https://github.com/adrienverge/yamllint.git
+  rev: v1.35.1
+  hooks:
+  - id: yamllint
+    args:
+      [
+        "--strict",
+        "-d",
+        '{extends: default, rules: {line-length: {max: 250}, indentation: {spaces: 2, indent-sequences: false}}}'
+      ]
+# towncrier
+- repo: https://github.com/twisted/towncrier
+  rev: 24.8.0
+  hooks:
+  - id: towncrier-update
+    files: $docs/changes/
+    args: ['--keep']
