Add truthy values

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,7 +64,7 @@ repos:
       [
         "--strict",
         "-d",
-        '{extends: default, rules: {line-length: {max: 250}, indentation: {spaces: 2, indent-sequences: false}}}'
+        '{extends: default, rules: {line-length: {max: 250}, indentation: {spaces: 2, indent-sequences: consistent}, truthy: {allowed-values: ["true", "false", "on", "off"]}}}'
       ]
 # towncrier
 - repo: https://github.com/twisted/towncrier
